cargo_check_output.txt
    Checking my_project v0.1.0 (C:\Users\Liszka\Desktop\Software Engineering\Rust-TA-1)
error[E0277]: the trait bound `MediumAdParams: serde::Serialize` is not satisfied
    --> src\indicators\medium_ad.rs:1145:10
     |
1145 | #[derive(Serialize, Deserialize)]
     |          ^^^^^^^^^ the trait `serde::Serialize` is not implemented for `MediumAdParams`
...
1148 |     pub combos: Vec<MediumAdParams>,
     |     ------------------------------- required by a bound introduced by this call
     |
     = note: for local types consider adding `#[derive(serde::Serialize)]` to your `MediumAdParams` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `serde::Serialize`:
               &'a T
               &'a mut T
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
               (T0, T1, T2, T3, T4)
             and 308 others
     = note: required for `Vec<MediumAdParams>` to implement `serde::Serialize`
note: required by a bound in `serde::ser::SerializeStruct::serialize_field`
    --> C:\Users\Liszka\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\serde-1.0.219\src\ser\mod.rs:1866:21
     |
1864 |     fn serialize_field<T>(&mut self, key: &'static str, value: &T) -> Result<(), Self::Error>
     |        --------------- required by a bound in this associated function
1865 |     where
1866 |         T: ?Sized + Serialize;
     |                     ^^^^^^^^^ required by this bound in `SerializeStruct::serialize_field`
     = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MediumAdParams: serde::Deserialize<'_>` is not satisfied
    --> src\indicators\medium_ad.rs:1148:14
     |
1148 |     pub combos: Vec<MediumAdParams>,
     |                 ^^^^^^^^^^^^^^^^^^^ the trait `serde::Deserialize<'_>` is not implemented for `MediumAdParams`
     |
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `MediumAdParams` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `serde::Deserialize<'de>`:
               &'a Path
               &'a [u8]
               &'a str
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
             and 321 others
     = note: required for `Vec<MediumAdParams>` to implement `serde::Deserialize<'_>`
note: required by a bound in `next_element`
    --> C:\Users\Liszka\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\serde-1.0.219\src\de\mod.rs:1732:12
     |
1730 |     fn next_element<T>(&mut self) -> Result<Option<T>, Self::Error>
     |        ------------ required by a bound in this associated function
1731 |     where
1732 |         T: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `SeqAccess::next_element`

error[E0277]: the trait bound `MediumAdParams: serde::Deserialize<'_>` is not satisfied
    --> src\indicators\medium_ad.rs:1148:14
     |
1148 |     pub combos: Vec<MediumAdParams>,
     |                 ^^^^^^^^^^^^^^^^^^^ the trait `serde::Deserialize<'_>` is not implemented for `MediumAdParams`
     |
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `MediumAdParams` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `serde::Deserialize<'de>`:
               &'a Path
               &'a [u8]
               &'a str
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
             and 321 others
     = note: required for `Vec<MediumAdParams>` to implement `serde::Deserialize<'_>`
note: required by a bound in `next_value`
    --> C:\Users\Liszka\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\serde-1.0.219\src\de\mod.rs:1871:12
     |
1869 |     fn next_value<V>(&mut self) -> Result<V, Self::Error>
     |        ---------- required by a bound in this associated function
1870 |     where
1871 |         V: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `MapAccess::next_value`

error[E0277]: the trait bound `MediumAdParams: serde::Deserialize<'_>` is not satisfied
    --> src\indicators\medium_ad.rs:1145:21
     |
1145 | #[derive(Serialize, Deserialize)]
     |                     ^^^^^^^^^^^ the trait `serde::Deserialize<'_>` is not implemented for `MediumAdParams`
     |
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `MediumAdParams` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `serde::Deserialize<'de>`:
               &'a Path
               &'a [u8]
               &'a str
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
             and 321 others
     = note: required for `Vec<MediumAdParams>` to implement `serde::Deserialize<'_>`
note: required by a bound in `serde::__private::de::missing_field`
    --> C:\Users\Liszka\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\serde-1.0.219\src\private\de.rs:25:8
     |
23   | pub fn missing_field<'de, V, E>(field: &'static str) -> Result<V, E>
     |        ------------- required by a bound in this function
24   | where
25   |     V: Deserialize<'de>,
     |        ^^^^^^^^^^^^^^^^ required by this bound in `missing_field`
     = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `my_project` (lib) due to 4 previous errors
